deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domolov-api
spec:
  selector:
    app.kubernetes.io/name: domolov
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
